# cocinando

./: pyproject.toml
REPO/frontend/: add.html  index.html  login.html  main.py  styles.css  view.html
backend/: README.md  extract_server.py  requirements.txt  script.js
frontend/: README.md  add.html  dashboard.html  home.html  index.html  login.html  script.js  signup.html  styles.css  view.html
